--- a/feature/keychain/src/main/res/values/strings.xml
+++ b/feature/keychain/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="keychain_title">Keychain</string>
-    <string name="keychain_search_hint">Search keys and password</string>
-    <string name="keychain_search_clear">Clear</string>
     <string name="keychain_new_key">New key</string>
+    <string name="keychain_search_back">Back</string>
+    <string name="keychain_search_clear">Clear</string>
+    <string name="keychain_search_hint">Search keys and password</string>
 </resources>
