--- a/feature/key/src/main/res/values/strings.xml
+++ b/feature/key/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="key_headline_website_application">Website/Application</string>
     <string name="key_item_password_show">Show password</string>
     <string name="key_item_password_copy">Copy password</string>
+    <string name="key_title">Info</string>
     <string name="key_toolbar_apply">Apply</string>
     <string name="key_toolbar_cancel">Cancel</string>
     <string name="key_toolbar_delete">Delete</string>
